# openfairdb

./: .clippy.toml  .codespellignore  .env  .gitignore  .gitlab-ci.yml  .justfile  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.clux-muslrust  Makefile.x86_64-unknown-linux-musl  README.md  build.rs  classes.puml  clippy.toml  config.toml  dead_code.rs  default.nix  dev-env.nix  flake.nix  openapi.yaml  opencage.json  openfairdb-bin.nix  rust-packages.nix  rust-toolchain  rust-toolchain.toml  rustc-version  search_example.md  search_results.json  search_results_tantivy.json  shell.nix
ofdb-app/: Cargo.toml  index.html  main.css  map.js
ofdb-app-clearance/: .gitignore  Cargo.toml  Trunk.toml  index.html  main.sass
ofdb-app-clearance/assets/: fa-solid.min.css  fontawesome.min.css
ofdb-app-clearance/src/: api.rs  lib.rs  main.rs
ofdb-app-clearance/src/components/: navbar.rs
ofdb-app-clearance/src/page/: index.rs  login.rs  mod.rs
ofdb-app/src/: lib.rs  login.rs  mod.rs  password.rs  register.rs  tests.rs  update.rs  view.rs
ofdb-app/src/view/: dashboard.rs  entry.rs  event.rs  login.rs  mod.rs  page.rs  password.rs  place.rs  register.rs
ofdb-application/: Cargo.toml
ofdb-application/src/: archive_comments.rs  archive_events.rs  archive_ratings.rs  change_user_role.rs  create_event.rs  create_place.rs  create_rating.rs  error.rs  lib.rs  reset_password.rs  review_place_with_token.rs  review_places.rs  send_update_reminders.rs  update_event.rs  update_place.rs
ofdb-application/src/tests/: clearance.rs  mod.rs  search.rs
ofdb-boundary/: Cargo.toml
ofdb-boundary/src/: conv.rs  lib.rs
ofdb-core/: Cargo.toml
ofdb-core/benches/: calc_avg_rating.rs
ofdb-core/src/: bbox.rs  db.rs  geo.rs  lib.rs  password.rs  rating.rs  repositories.rs  text.rs  user.rs
ofdb-core/src/authorization/: mod.rs  moderated_tag.rs  user.rs
ofdb-core/src/gateways/: email.rs  geocode.rs  mod.rs  notify.rs
ofdb-core/src/tag/: mod.rs  moderated.rs
ofdb-core/src/usecases/: archive_comments.rs  archive_events.rs  archive_ratings.rs  authorize.rs  bbox_subscriptions_by_coordinate.rs  change_user_role.rs  confirm_email.rs  confirm_email_and_reset_password.rs  create_new_place.rs  create_new_user.rs  delete_event.rs  delete_user.rs  email_addresses_by_coordinate.rs  error.rs  export_event.rs  export_place.rs  filter_event.rs  filter_place.rs  find_duplicates.rs  get_bbox_subscriptions.rs  get_event.rs  get_user.rs  indexing.rs  load_places.rs  load_ratings_with_comments.rs  login.rs  mod.rs  query_events.rs  rate_place.rs  register.rs  review_places.rs  review_tokens.rs  search.rs  send_update_reminders.rs  store_event.rs  subscribe_to_bbox.rs  tests.rs  unsubscribe_all_bboxes.rs  update_place.rs  user_tokens.rs
ofdb-core/src/usecases/clearance/: mod.rs  place.rs
ofdb-core/src/usecases/tests/: builders.rs  mod.rs
ofdb-core/src/util/: filter.rs  mod.rs  parse.rs  sort.rs  validate.rs
ofdb-db-sqlite/: Cargo.toml
ofdb-db-sqlite/migrations/2018-01-18-000001_init/: down.sql
ofdb-db-sqlite/migrations/2018-08-03-084357_add_entry_image_urls/: up.sql
ofdb-db-sqlite/migrations/2018-10-15-135520_indexes_for_foreign_keys/: down.sql
ofdb-db-sqlite/migrations/2019-01-07-000000_add_events/: up.sql
ofdb-db-sqlite/migrations/2019-03-05_archived_timestamp/: up.sql
ofdb-db-sqlite/migrations/2019-03-10_email_token_credentials/: up.sql
ofdb-db-sqlite/migrations/2019-08-19_add_indexes_and_unique_constraints/: down.sql  up.sql
ofdb-db-sqlite/migrations/2020-08-12_custom_links/: down.sql  up.sql
ofdb-db-sqlite/migrations/2020-08-13_contact_name_and_founding_date/: up.sql
ofdb-db-sqlite/migrations/2022-09-02_organization_place_clearance_fk/: up.sql
ofdb-db-sqlite/migrations/2022-10-12_add_sent_reminders/: up.sql
ofdb-db-sqlite/migrations/2023-01-12_review_token_credentials/: up.sql
ofdb-db-sqlite/src/: lib.rs  models.rs  schema.rs  util.rs
ofdb-db-sqlite/src/repo_impl/: comment.rs  event.rs  mod.rs  org.rs  place.rs  place_clearance.rs  rating.rs  reminder.rs  review_token.rs  subscription.rs  tag.rs  user.rs  user_token.rs
ofdb-db-sqlite/src/repo_wrapper/: mod.rs  read_only.rs  read_write.rs
ofdb-db-tantivy/: Cargo.toml
ofdb-db-tantivy/src/: lib.rs
ofdb-entities/: Cargo.toml
ofdb-entities/src/: activity.rs  address.rs  authorization.rs  builders.rs  category.rs  clearance.rs  comment.rs  contact.rs  email.rs  event.rs  geo.rs  id.rs  lib.rs  links.rs  location.rs  nonce.rs  organization.rs  password.rs  place.rs  rating.rs  review.rs  review_status.rs  revision.rs  subscription.rs  tag.rs  time.rs  url.rs  user.rs
ofdb-frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
ofdb-frontend-api/: Cargo.toml
ofdb-frontend-api/src/: clearance.rs  lib.rs  public.rs  user.rs  util.rs
ofdb-frontend/src/: api.rs  lib.rs  main.rs  style.css
ofdb-frontend/src/components/: credentials.rs  map.rs  mod.rs  navbar.rs  search.rs
ofdb-frontend/src/pages/: dashboard.rs  entry.rs  event.rs  home.rs  login.rs  mod.rs  register.rs  reset_password.rs
ofdb-gateways/: Cargo.toml  askama.toml
ofdb-gateways/src/: lib.rs  mailgun.rs  notify.rs  opencage.rs  sendmail.rs  user_communication.rs
ofdb-gateways/src/email/: mailgun.rs  mod.rs  send_to_json_file.rs  sendmail.rs
ofdb-gateways/src/user_communication/: email_reminder_formatter.rs  mod.rs
ofdb-seed/: Cargo.toml  README.md
ofdb-seed/examples/login/: Cargo.toml  index.html
ofdb-seed/examples/login/src/: lib.rs
ofdb-seed/examples/search/: Cargo.toml  index.html
ofdb-seed/examples/tags/: Cargo.toml  index.html
ofdb-seed/src/: api.rs  lib.rs
ofdb-seed/src/components/: login.rs  mod.rs  search_bar.rs  search_result_item.rs
ofdb-webserver/: Cargo.toml  build.rs
ofdb-webserver/src/: lib.rs
ofdb-webserver/src/adapters/: csv.rs  json.rs
ofdb-webserver/src/core/: error.rs  mod.rs
ofdb-webserver/src/web/: guards.rs  jwt.rs  mockdb.rs  mod.rs  popular_tags_cache.rs  sqlite.rs  tantivy.rs  tests.rs
(+357 files in other folders)
