[package]
name = "openfairdb"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.12.4"
repository = "https://github.com/kartevonmorgen/openfairdb"
homepage = "https://github.com/kartevonmorgen/openfairdb"
keywords = ["geo", "fair", "sustainability"]
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.70.0"

[workspace]
members = [
  "ofdb-application",
  "ofdb-boundary",
  "ofdb-core",
  "ofdb-db-sqlite",
  "ofdb-db-tantivy",
  "ofdb-entities",
  "ofdb-frontend-api",
  "ofdb-gateways",
  "ofdb-seed",
  "ofdb-webserver",
]
exclude = [ "ofdb-frontend", "ofdb-app-clearance" ]

[patch.crates-io]
ofdb-application  = { path = "./ofdb-application"  }
ofdb-boundary     = { path = "./ofdb-boundary"     }
ofdb-core         = { path = "./ofdb-core"         }
ofdb-db-sqlite    = { path = "./ofdb-db-sqlite"    }
ofdb-db-tantivy   = { path = "./ofdb-db-tantivy"   }
ofdb-entities     = { path = "./ofdb-entities"     }
ofdb-frontend-api = { path = "./ofdb-frontend-api" }
ofdb-gateways     = { path = "./ofdb-gateways"     }
ofdb-seed         = { path = "./ofdb-seed"         }
ofdb-webserver    = { path = "./ofdb-webserver"    }

[dependencies]
ofdb-application  = "=0.0.0"
ofdb-core         = "=0.0.0"
ofdb-db-sqlite    = "=0.0.0"
ofdb-db-tantivy   = "=0.0.0"
ofdb-frontend-api = "=0.0.0"
ofdb-gateways     = "=0.0.0"
ofdb-webserver    = "=0.0.0"

ofdb-entities     =  "*"

anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["cargo", "derive"] }
dotenvy = "0.15.7"
duration-str = { version = "0.5.1", default-features = false, features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
time = "0.3.23"
tokio = "1.29.1"
toml = "0.7.6"

[patch.crates-io.maud]
# TODO: use v0.26.0 as soon as it's published
git = "https://github.com/slowtec/maud"
branch = "rocket-0.5.0-rc.3"

[patch.crates-io.geocoding]
# TODO: use upstream as soon as https://github.com/georust/geocoding/pull/58 is merged.
git = "https://github.com/slowtec/geocoding"
branch = "remove-reqwest-default-tls-feature"

[dev-dependencies]
rand = "0.8.5"
ofdb-entities = { version = "*", features = ["builders"] }

[profile.dev]
opt-level = 2
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"

[profile.profiling]
inherits = "release"
# Keep debug symbols for profiling -> results in huge binary!
debug = true

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
