[package]
name = "openfairdb"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.12.12"
repository = "https://github.com/kartevonmorgen/openfairdb"
homepage = "https://github.com/kartevonmorgen/openfairdb"
keywords = ["geo", "fair", "sustainability"]
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "AGPL-3.0-or-later"
edition = "2024"
rust-version = "1.97.0"

[workspace]
members = [
  "ofdb-application",
  "ofdb-boundary",
  "ofdb-core",
  "ofdb-db-sqlite",
  "ofdb-db-tantivy",
  "ofdb-entities",
  "ofdb-frontend-api",
  "ofdb-gateways",
  "ofdb-webserver",
]
exclude = [ "ofdb-frontend", "ofdb-app-clearance" ]

[patch.crates-io]
ofdb-application  = { path = "./ofdb-application"  }
ofdb-boundary     = { path = "./ofdb-boundary"     }
ofdb-core         = { path = "./ofdb-core"         }
ofdb-db-sqlite    = { path = "./ofdb-db-sqlite"    }
ofdb-db-tantivy   = { path = "./ofdb-db-tantivy"   }
ofdb-entities     = { path = "./ofdb-entities"     }
ofdb-frontend-api = { path = "./ofdb-frontend-api" }
ofdb-gateways     = { path = "./ofdb-gateways"     }
ofdb-webserver    = { path = "./ofdb-webserver"    }

[dependencies]
ofdb-application  = "=0.0.0"
ofdb-core         = "=0.0.0"
ofdb-db-sqlite    = "=0.0.0"
ofdb-db-tantivy   = "=0.0.0"
ofdb-frontend-api = "=0.0.0"
ofdb-gateways     = "=0.0.0"
ofdb-webserver    = "=0.0.0"

ofdb-entities     =  "*"

anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
dotenvy = "0.15.7"
duration-str = { version = "0.21.0", default-features = false, features = ["serde"] }
env_logger = "0.11.11"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = "1.52.3"
toml = "1.1.2"

[dev-dependencies]
rand = "0.10.2"
ofdb-entities = { version = "*", features = ["builders"] }

[profile.dev]
opt-level = 2
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"

[profile.profiling]
inherits = "release"
# Keep debug symbols for profiling -> results in huge binary!
debug = true

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
