[package]
name = "ofdb-app-clearance"
version = "0.0.0" # will stay 0.0.0 until published
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"
publish = false
rust-version = "1.73.0"

[dependencies]
# Project dependencies
ofdb-boundary = { version = "0.12.6", features = ["extra-derive"] }
ofdb-entities = { version = "0.12.6", features = ["wasm-bindgen"] }
ofdb-frontend-api = "=0.0.0"

# External dependencies
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
difference = "2.0.0"
gloo-storage = "0.3.0"
leptos = { version = "0.5.4", features = ["csr"] }
leptos_router = { version = "0.5.4", features = ["csr"] }
log = "0.4.20"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["HtmlFormElement"] }

[patch.crates-io]
ofdb-boundary     = { path = "../ofdb-boundary"     }
ofdb-entities     = { path = "../ofdb-entities"     }
ofdb-frontend-api = { path = "../ofdb-frontend-api" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
