[package]
name = "ofdb-app"
version = "0.0.0" # will stay 0.0.0 until published
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ofdb-boundary = "*"
ofdb-entities = "*"
seed = "*"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
