[package]
name = "ofdb-application"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
ofdb-core = "=0.0.0"
ofdb-db-sqlite = "=0.0.0" # TODO: remove
ofdb-entities = { version = "0.12.7", features = ["url"] }

anyhow = "1.0.82"
csv = "1.3.0"
log = "0.4.21"
pwhash = "1.0.0"
r2d2 = ">=0.8.10,<0.9" # TODO: remove
serde_json = "1.0.115"
thiserror = "1.0.58"
time = "0.3.36"

[dev-dependencies]
ofdb-db-tantivy = "=0.0.0" # TODO: remove
env_logger = "0.11"
