[package]
name = "ofdb-application"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
ofdb-core = "=0.0.0"
ofdb-db-sqlite = "=0.0.0" # TODO: remove
ofdb-entities = { version = "0.12.7", features = ["url"] }

anyhow = "1.0.93"
csv = "1.3.1"
log = "0.4.22"
pwhash = "1.0.0"
r2d2 = ">=0.8.10,<0.9" # TODO: remove
serde_json = "1.0.133"
thiserror = "2.0.3"
time = "0.3.36"

[dev-dependencies]
ofdb-db-tantivy = "=0.0.0" # TODO: remove
env_logger = "0.11"
