[package]
name = "ofdb-boundary"
description = "Serializable, anemic data structures for accessing the OpenFairDB API in a type-safe manner."
license = "MIT/Apache-2.0"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
time = { version = "0.3.17", features = ["serde"] }

[dependencies.ofdb-entities]
version = "0.12.0"
path = "../ofdb-entities"
optional = true

[dependencies.thiserror]
version = "1.0.37"
optional = true

[features]
default = ["entity-conversions", "thiserror"]
extra-derive = []
entity-conversions = ["ofdb-entities"]
wasm-bindgen = ["ofdb-entities/wasm-bindgen"]

[badges]
maintenance = { status = "actively-developed" }
