[package]
name = "ofdb-boundary"
description = "Serializable, anemic data structures for accessing the OpenFairDB API in a type-safe manner."
license = "MIT/Apache-2.0"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }

[dependencies.time]
version = "0.3.28"
default-features = false
features = ["serde"]

[dependencies.ofdb-entities]
version = "0.12.6"
path = "../ofdb-entities"
optional = true

[dependencies.thiserror]
version = "1.0.48"
optional = true

[features]
default = ["entity-conversions", "dep:thiserror"]
extra-derive = ["dep:thiserror"]
entity-conversions = ["dep:ofdb-entities"]
wasm-bindgen = ["ofdb-entities/wasm-bindgen", "time/wasm-bindgen"]

[badges]
maintenance = { status = "actively-developed" }
