[package]
name = "ofdb-core"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Project dependencies
ofdb-entities = { version = "0.12.7", features = ["url"] }

# External dependencies
anyhow = "1.0.95"
fast_chemail = "0.9.6"
lazy_static = "1.5.0"
log = "0.4.22"
passwords = "3.1.16"
regex = "1.11.1"
thiserror = "2.0.9"
time = "0.3.37"
url = "2.5.4"

[dev-dependencies]
brunch = "0.8.0"
ofdb-entities = { version = "*", features = ["builders"] }
time = "0.3.37"

[[bench]]
name = "calc_avg_rating"
path = "benches/calc_avg_rating.rs"
harness = false
