[package]
name = "ofdb-core"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Project dependencies
ofdb-entities = { version = "0.12.7", features = ["url"] }

# External dependencies
anyhow = "1.0.103"
fast_chemail = "0.9.6"
lazy_static = "1.5.0"
log = "0.4.33"
passwords = "3.1.18"
regex = "1.13.0"
thiserror = "2.0.18"
time = "0.3.53"
url = "2.5.8"

[dev-dependencies]
brunch = "0.11.1"
ofdb-entities = { version = "*", features = ["builders"] }
time = "0.3.53"

[[bench]]
name = "calc_avg_rating"
path = "benches/calc_avg_rating.rs"
harness = false
