[package]
name = "ofdb-db-sqlite"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = "1.0.100"
log = "0.4.28"
num-traits = "0.2.19"
diesel = { version = "2.3.2", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
ofdb-core = { version = "0.0.0", path = "../ofdb-core" }
parking_lot = "0.12.5"
time = { version = "0.3.44", features = ["macros", "formatting", "parsing"] }

# Bundle SQLite code to prevent dynamic linking.
# The pinned version must be compatible with diesel!
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
