[package]
name = "ofdb-db-tantivy"
version = "0.0.0" # will stay 0.0.0 until published

edition.workspace = true
rust-version.workspace = true

[dependencies]
ofdb-core = "=0.0.0"

anyhow = "1.0.81"
log = "0.4.21"
num-traits = "0.2.18"
parking_lot = "0.12.1"
strum = "0.26.2"
tantivy = "0.21.1"
# TODO: Remove this workaround when the upstream issue has been resolved.
# <https://github.com/gyscos/zstd-rs/issues/270>
# Should be resolved after upgrading to tantivy v0.22.0 is scheduled for release.
zstd-sys = "=2.0.9"
