[package]
name = "ofdb-entities"
description = "Reusable, agnostic domain entities for OpenFairDB."
license = "MIT/Apache-2.0"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bs58 = "0.5.1"
itertools = "0.15.0"
mailparse = "0.16.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
pwhash = "1.0.0"
uuid = { version = "1.23.5", features = ["v4"] }
url = { version = "2.5.8", optional = true }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "macros"] }

[features]
default = []
builders = []
url = ["dep:url"]
wasm-bindgen = ["uuid/js"]

[dev-dependencies]
rand = "0.10.2"

[badges]
maintenance = { status = "actively-developed" }
