[package]
name = "ofdb-frontend-api"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
percent-encoding = "2.3.0"
serde = "1.0.175"
thiserror = "1.0.44"

# Update to v0.3.x as soon as
# https://github.com/rustwasm/gloo/issues/353
# has been fixed.
[dependencies.gloo-net]
version = "0.2.6"
default-features = false
features = ["http", "json"]

[dependencies.ofdb-boundary]
version = "0.12.5"
path = "../ofdb-boundary"
default-features = false
features = ["extra-derive"]
