[package]
name = "ofdb-frontend-api"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
percent-encoding = "2.3.1"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"

[dependencies.gloo-net]
version = "0.5.0"
default-features = false
features = ["http", "json"]

[dependencies.ofdb-boundary]
version = "0.12.5"
path = "../ofdb-boundary"
default-features = false
features = ["extra-derive"]

[dependencies.web-sys]
version = "0.3.69"
features = ["RequestCredentials"]
