[package]
name = "ofdb-app"
version = "0.0.0" # will stay 0.0.0 until published
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"
publish = false
rust-version = "1.82.0"

[dependencies]
# Project dependencies
ofdb-frontend-api = "=0.0.0"

# External dependencies
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-storage = "0.3.0"
js-sys = "0.3.72"
leaflet = "0.4.1"
leptos = { version = "0.6.15", features = ["csr"] }
leptos-leaflet = { version = "0.8.1", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
log = "0.4.22"
web-sys = "0.3.72"

[dependencies.time]
version = "0.3.36"
default-features = false
features = ["macros", "formatting", "wasm-bindgen"]

[dependencies.ofdb-boundary]
version = "0.12.7"
default-features = false
features = ["extra-derive", "wasm-bindgen"]

[patch.crates-io]
ofdb-boundary     = { path = "../ofdb-boundary"     }
ofdb-frontend-api = { path = "../ofdb-frontend-api" }

[patch.crates-io.leptos-leaflet]
git = "https://github.com/headless-studio/leptos-leaflet"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
