[package]
name = "ofdb-gateways"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ofdb-core = "=0.0.0"
ofdb-entities = "0.12.7"

anyhow = "1.0.86"
askama = "0.12.1"
fast_chemail = "0.9.6"
itertools = "0.13.0"
jfs = "0.9.0"
log = "0.4.22"
quoted_printable = "0.5.1"
serde = { version = "1.0.205", features = ["derive"] }
time = { version = "0.3.36", features = ["macros", "formatting", "local-offset"] }
thiserror = "1.0.63"

[dependencies.geocoding]
version = "0.4.0"
default-features = false
features = ["rustls-tls"]

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["blocking", "rustls-tls", "json"]
