[package]
name = "ofdb-gateways"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ofdb-core = "=0.0.0"
ofdb-entities = "0.12.7"

anyhow = "1.0.100"
askama = "0.12.1"
fast_chemail = "0.9.6"
itertools = "0.14.0"
jfs = "0.9.0"
log = "0.4.28"
quoted_printable = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["macros", "formatting", "local-offset"] }
thiserror = "2.0.17"

[dependencies.geocoding]
version = "0.4.0"
default-features = false
features = ["rustls-tls"]

[dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["blocking", "rustls-tls", "json"]
