[package]
name = "ofdb-seed"
description = "A seed library for building OpenFairDB based web applications"
license = "MIT/Apache-2.0"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
percent-encoding = "2.2.0"
seed = "0.9.2"
web-sys = "0.3.61"

[dependencies.ofdb-boundary]
version = "0.12.2"
path = "../ofdb-boundary"
default-features = false

[badges]
maintenance = { status = "actively-developed" }
