[package]
name = "ofdb-seed"
description = "A seed library for building OpenFairDB based web applications"
license = "MIT/Apache-2.0"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
gloo-net = "0.2.6"
percent-encoding = "2.2.0"
seed = "0.10.0"
serde = "1.0.156"
thiserror = "1.0.39"
web-sys = "0.3.61"

[dependencies.ofdb-boundary]
version = "0.12.2"
path = "../ofdb-boundary"
default-features = false
features = ["extra-derive"]

[badges]
maintenance = { status = "actively-developed" }
