[package]
name = "ofdb-seed"
description = "A seed library for building OpenFairDB based web applications"
license = "MIT/Apache-2.0"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
ofdb-frontend-api = "=0.0.0"
seed = "0.10.0"

[dependencies.ofdb-boundary]
version = "0.12.2"
path = "../ofdb-boundary"
default-features = false
features = ["extra-derive"]

[badges]
maintenance = { status = "actively-developed" }
