[package]
name = "ofdb-webserver"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
ofdb-application = { version = "=0.0.0" }
ofdb-boundary = { version = "0.12.7", features = ["extra-derive"] }
ofdb-core = "=0.0.0"
ofdb-db-sqlite = "=0.0.0" # TODO: remove
ofdb-db-tantivy = "=0.0.0" # TODO: remove
ofdb-entities = { version = "0.12.7", features = ["url"] }

anyhow = "1.0.79"
base64 = { version = "0.21.7", optional = true }
captcha = "0.0.9"
chrono = { version = "0.4.33", default-features = false }
csv = "1.3.0"
icalendar = "0.16.0"
jsonwebtoken = { version = "9.2.0", optional = true }
lazy_static = "1.4.0"
log = "0.4.20"
maud = { version = "0.26.0", optional = true, features = ["rocket"] }
num-traits = "0.2.17"
parking_lot = "0.12.1"
r2d2 = "0.8.10"
rand = { version = "0.8.5", optional = true }
rust-embed = "8.2.0"
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
time = { version = "0.3.31", features = ["macros", "formatting"] }
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
ofdb-entities = { version = "0.12.7", features = ["url", "builders"] }

[build-dependencies]
walkdir = "2.4.0"

[features]
default = ["frontend", "email", "clearance", "cookies", "jwt"]

clearance = []
cookies = []
email = []
frontend = ["maud"]
jwt = ["jsonwebtoken", "base64", "rand"]
