[package]
name = "ofdb-webserver"
version = "0.0.0" # will stay 0.0.0 until published
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
ofdb-application = { version = "=0.0.0" }
ofdb-boundary = { version = "0.12.7", features = ["extra-derive"] }
ofdb-core = "=0.0.0"
ofdb-db-sqlite = "=0.0.0" # TODO: remove
ofdb-db-tantivy = "=0.0.0" # TODO: remove
ofdb-entities = { version = "0.12.7", features = ["url"] }

anyhow = "1.0.86"
base64 = { version = "0.22.1", optional = true }
captcha = "0.0.9"
chrono = { version = "0.4.38", default-features = false }
csv = "1.3.0"
icalendar = "0.16.1"
jsonwebtoken = { version = "9.3.0", optional = true }
lazy_static = "1.4.0"
log = "0.4.21"
maud = { version = "0.26.0", optional = true, features = ["rocket"] }
num-traits = "0.2.19"
parking_lot = "0.12.3"
r2d2 = "0.8.10"
rand = { version = "0.8.5", optional = true }
rust-embed = "8.4.0"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["macros", "formatting"] }
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
ofdb-entities = { version = "0.12.7", features = ["url", "builders"] }

[build-dependencies]
walkdir = "2.5.0"

[features]
default = ["frontend", "email", "clearance", "cookies", "jwt"]

clearance = []
cookies = []
email = []
frontend = ["maud"]
jwt = ["jsonwebtoken", "base64", "rand"]
