[package]
name = "tags"
version = "0.0.0"
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "*"
ofdb-boundary = { version = "0.9", features = [ "extra-derive" ] }
ofdb-seed = { path = "../.." }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
